log
Wed 10 May 2023 11:53:56 PM UTC: 
 tests:  0|4
total_score: 0/70
77d63f8
Thu 11 May 2023 12:08:23 AM UTC: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|3
total_score: 10/70
4d0ad3e
Thu 11 May 2023 12:10:32 AM UTC: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:31:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   31 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9a7d6b7
Thu 11 May 2023 12:11:23 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
5dc9730
